# stock-ara

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.db  README.md  compose.yaml  pyproject.toml
db/: Dockerfile
db/init/: 0_config.sh  1_create_table.sql  1_install_extension.sql  2_create_table.sql
sa3_bot/: app.py
scripts/: 1_fetch_report.py  2_extract_business.py  3_summarize_business.py  4_encode_business.py  5_search_business.py  download_dart_filing.py  fetch_dart_filing.py  make_business_embedding.py  prepare_expected_return.py  register_stock_asset.py  update_expected_return.py  update_stock_price.py
scripts.old/: 0_refine_csv.py  6_migrate_db.py  7_insert_price_data.py
stock_ainalyst/: bot.py  db.py  llm.py  npay.py  quant.py
stock_ainalyst/datasource/: naver.py
stock_ainalyst/function/: __init__.py  command.py  prompt.py  rag.py
stock_ainalyst/llm/: cot.py  openai.py  rag.py
stock_ainalyst_bot/: app.py
stock_ara/: bot.py  db.py  pyproject.toml
stock_ara/datasource/: naver.py
stock_ara/function/: command.py  rag.py
stock_ara/models/: asset_price.py  company.py
stock_ara/stock_ara/: db.py
stock_ara/stock_ara/domain/: asset.py  company.py  portfolio_manager.py
stock_ara/stock_ara/domain/stock/: __init__.py  analyst.py  calculator.py  screener.py
stock_ara/stock_ara/function/: command.py  prompt.py
stock_ara/stock_ara/infra/: database.py
stock_ara/stock_ara/infra/repository/: cache_repository.py  company_repository.py  stock_repository.py
stock_ara/stock_ara/llm/: openai.py  papago.py
stock_ara/stock_ara/models/: asset.py
stock_ara/stock_ara/scripts/: prepare_expected_return.py
stock_ara_bot/: Dockerfile  pyproject.toml
stock_ara_bot/stock_ara_bot/: command.py  main.py
